k8s/test/route-backend.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    io.kompose.service: dami-backend
  name: dami-backend
  annotations:
    haproxy.router.openshift.io/ip_whitelist: ''
spec:
  host: fcc-dami-test-backend.web.cern.ch
  port:
    targetPort: 8000
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: ""
    name: dami-backend
    weight: null
