k8s/test/route-frontend.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    io.kompose.service: dami-frontend
  name: dami-frontend
  annotations:
    haproxy.router.openshift.io/ip_whitelist: ''
spec:
  host: fcc-dami-test.web.cern.ch
  port:
    targetPort: 3000
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: ""
    name: dami-frontend
    weight: null
